force-app/main/default/objects/Account/fields/Bootcamp__c.field-meta.xml
<CustomField>
    <fullName>Bootcamp__c</fullName>
    <description>This a picklist field for the DevOps bootcamp</description>
    <label>Bootcamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>value1</fullName>
            </value>
            <value>
                <fullName>value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>