force-app/main/default/objects/Account/fields/CI_Job_validation__c.field-meta.xml
<CustomField>
    <fullName>CI_Job_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CI Job validation</label>
    <type>Checkbox</type>
</CustomField>