force-app/main/default/objects/Account/fields/Copado_Demo__c.field-meta.xml
<CustomField>
    <fullName>Copado_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copado Demo</label>
    <type>Checkbox</type>
</CustomField>