force-app/main/default/objects/Account/fields/Just_one_more_field_to_feply__c.field-meta.xml
<CustomField>
    <fullName>Just_one_more_field_to_feply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Just one more field to feply</label>
    <type>Checkbox</type>
</CustomField>