force-app/main/default/objects/Account/fields/Praneeth_Pipeline_test__c.field-meta.xml
<CustomField>
    <fullName>Praneeth_Pipeline_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Praneeth Pipeline test</label>
    <type>Checkbox</type>
</CustomField>