force-app/main/default/objects/Account/fields/SL_NO__c.field-meta.xml
<CustomField>
    <fullName>SL_NO__c</fullName>
    <label>SL.NO</label>
    <type>AutoNumber</type>
</CustomField>