force-app/main/default/objects/Account/fields/Test_Tiaa__c.field-meta.xml
<CustomField>
    <fullName>Test_Tiaa__c</fullName>
    <label>Test Tiaa</label>
    <type>AutoNumber</type>
</CustomField>