force-app/main/default/objects/Account/fields/TIAA_Demo__c.field-meta.xml
<CustomField>
    <fullName>TIAA_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TIAA Demo</label>
    <type>Checkbox</type>
</CustomField>