force-app/main/default/objects/Account/fields/TIAA_Employee__c.field-meta.xml
<CustomField>
    <fullName>TIAA_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TIAA Employee</label>
    <type>Checkbox</type>
</CustomField>