force-app/main/default/objects/Account/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <type>AutoNumber</type>
</CustomField>